<resources>
    <string name="app_name">AplicationList</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Btneliminar">Eliminarr</string>
    <string name="Btnguardar">Guardar</string>
    <string name="Btneditar">Editar</string>
    <string name="Btnbuscar">Buscar</string>
    <string name="Etnombre">Nombre</string>
    <string name="Etapellido">Apellido</string>
    <string name="Tvmostrar">Su apellido es:</string>
    <string name="Tvmostrar1">Su nombre es:</string>
</resources>